--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "lulustudios",
   "version": "1.0.0",
-  "main": "registro/server.js",
+  "main": "usuario/server.js",
   "scripts": {
-    "start": "node registro/server.js",
+    "start": "node usuario/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
